--- a/website/style.css
+++ b/website/style.css
@@ -1,4 +1,74 @@
 body {
-    color: rgb(13, 92, 92);
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+/*HEADER STYLES*/
+head {
+    background: #222222;
+    color: #ffffff;
+    padding: 20px 30px;
+}
+
+header #page-header {
+    color: white;
+    text-decoration: none;
+    width: 49%;
+    display: inline-block;
+}
+
+header img {
+    width: 50px;
+    border-radius: 50%;
+    margin-right: 8px;
+    vertical-align: middle;
+}
+
+header h2 {
+    font-size: 16px;
+}
+
+/*MAIN NAV STYLES*/
+header #main-navigation {
+    width: 49%;
+    display: inline-block;
+    text-align: right;
+}
+
+header #main-navigation ul {
+    list-style: none;
+    padding: 0;
+}
+
+header #main-navigation ul li {
+    display: inline-block;
+}
+
+header #main-navigation ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+}
+
+header #main-navigation ul li a:hover {
+    background: #444;
+    border-radius: 3px;
+    transition: 0.3s ease all;
+}
+
+/*FOOTER STYLES*/
+footer {
+    background: #222;
+    color: #777;
+    padding: 40px;
     text-align: center;
+}
+
+footer img {
+    display: block;
+    border-radius: 5px;
+    width: 80px;
+    margin: 0 auto 10px;
 }
