--- a/website/style.css
+++ b/website/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 /*HEADER STYLES*/
-head {
+header {
     background: #222222;
     color: #ffffff;
     padding: 20px 30px;
@@ -56,6 +56,120 @@ header #main-navigation ul li a:hover {
     background: #444;
     border-radius: 3px;
     transition: 0.3s ease all;
+}
+
+/*HERO STYLES*/
+.hero {
+    min-height: 800px;
+    text-align: center;
+    background: #555;
+    background-image: url('../website/img/background0.jpg');
+    background-size: cover;
+}
+
+.hero-content {
+    color: white;
+    padding-top: 130px;
+    line-height: 1;
+}
+
+.hero-title {
+    margin: 0;
+    font-size: 100px;
+}
+
+.hero-content p {
+    font-size: 50px;
+    margin-bottom: 60px;
+}
+/*SITE SECTION STYLES*/
+.site-section {
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+.section-header {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.site-section-inside {
+    width: 80%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-header h2 {
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #777;
+}
+
+.site-section-secondary {
+    background: #EFEFEF;
+}
+
+/*ABOUT STYLES*/
+.about {
+    background: #ECF0F1;
+    width: 100%;
+    padding: 50px 0;
+}
+
+/*SERVICE BOX STYLES*/
+.service-box {
+    display: inline-block;
+    width: 24%;
+    padding: 20px 30px;
+    line-height: 1;
+}
+
+.service-box img {
+    width: 80px;
+    margin-bottom: 15px;
+}
+.service-box h5 {
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #999;
+    text-transform: uppercase;
+    font-weight: 300px;
+    letter-spacing: 2px;
+}
+
+/*TESTIMONIALS STYLES*/
+.testimonial-box {
+    display: inline-block;
+    width: 27%;
+    padding: 20px 30px;
+}
+
+.testimonial-content {
+    background: #ECF0F1;
+    padding: 15px;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+
+.testimonial-author img {
+    float: left;
+    width: 80px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.testimonial-author h5 {
+    font-size: 18px;
+    margin: 0;
+    padding-top: 15px;
+}
+
+.testimonial-author span {
+    color: #999;
+    font-size: 14px;
 }
 
 /*FOOTER STYLES*/
